fix(app): Fix Overflow issue when installPWA Modal appears

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,7 @@ body {
 	margin: 0;
 	font-family: "Ubuntu", sans-serif;
 	overscroll-behavior-y: contain;
+	overflow: hidden;
 }
 
 a {
